FWF-5742 [BUGFIX] - Border colour removed for scrollbar

--- a/forms-flow-theme/scss/_theme.scss
+++ b/forms-flow-theme/scss/_theme.scss
@@ -251,6 +251,7 @@ body {
   &:hover {
     &::-webkit-scrollbar {
       opacity: 1;
+      width: calc($scrollBarWidth / 2);
     }
 
     &::-webkit-scrollbar-thumb {
@@ -261,18 +262,13 @@ body {
       border-radius: 5rem; // should be just big enough to round corners off completely
       border: var(--spacer-025) solid transparent;
       opacity: 1;
-
       cursor: pointer;
     }
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    // Remove border-color highlight on hover by unsetting border
     border: none;
-    box-shadow: inset 0 0 0 $lineThin $primary;
+    box-shadow: none;
+    outline: none;
   }
 }
-
-
-
-
